--- a/src/App/App.css
+++ b/src/App/App.css
@@ -3,7 +3,6 @@
 }
 
 .App {
-  text-align: center;
   background-color: #10162F;
   height: 100vh;
   color: white;
@@ -11,15 +10,14 @@
 }
 
 #question {
-  text-align: center;
   background-color: #10162F;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  height: calc(100vh - 100px);
+  height: 100px;
+  margin-left: 200px;
 }
 
 
