--- a/src/components/Progressbar/Progressbar.css
+++ b/src/components/Progressbar/Progressbar.css
@@ -5,6 +5,8 @@ footer {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: 100;
+    position: relative;
 }
 
 #emptyProgress {
