--- a/src/components/Answer/Answer.css
+++ b/src/components/Answer/Answer.css
@@ -4,7 +4,7 @@
     border: 1px solid #2d5dcc;
     margin: 1rem 0;
     border-radius: 2px;
-    min-height: 4em;
+    /* min-height: 4em; */
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -18,7 +18,7 @@
     color: #4fe0b0;
     font-size: 1rem;
     font-weight: 700;
-    padding-left: 1rem;
+    padding: 2rem;
 }
 
 .true {
