QuestionList, delete question implemented

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -15,6 +15,15 @@
   margin: auto;
 }
 
+button {
+  cursor: pointer;
+  background-color: #FFD300;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 10px;
+  margin-right: 30px;
+  font-weight: bold;
+}
 
 
 
