--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,19 @@ nav {
     height: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 30px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    margin: 0 5px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+    color: white;
+    font-weight: bold;
 }
