Add Question and Update Question

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -21,8 +21,12 @@ button {
   border: none;
   border-radius: 4px;
   padding: 8px 10px;
-  margin-right: 30px;
   font-weight: bold;
+}
+
+button a {
+  color: black;
+  text-decoration: none;
 }
 
 
