Logout button added, back button for quiz list, styling

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,5 +17,16 @@ nav a {
 nav a:hover {
     text-decoration: underline;
     color: white;
-    font-weight: bold;
+}
+
+#logoutBtn {
+    background-color: transparent;
+    color: white;
+    font-weight: normal;
+    font-size: medium;
+}
+
+#logoutBtn:hover {
+    text-decoration: underline;
+    color: white;
 }
