--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+#error {
+    color: red;
+    text-align: center;
+    margin-bottom: 10px;
+}
