--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -28,7 +28,7 @@
 
   @media only screen and (min-width:481px) and (max-width: 768px) {
     #question {
-      text-align: center;
+      text-align: left;
       margin-left: 0;
     }
   }
