--- a/src/components/QuizForm/QuizForm.css
+++ b/src/components/QuizForm/QuizForm.css
@@ -6,7 +6,7 @@
 }
 
 #submitBttn {
-cursor: pointer;
+  cursor: pointer;
   background-color: #FFD300;
   border: none;
   border-radius: 4px;
@@ -15,6 +15,67 @@ cursor: pointer;
   margin-top: 10px;
 }
 
+#backBttn {
+  cursor: pointer;
+  background-color: #1f2435;
+  border: 1px solid #FFD300;
+  border-radius: 4px;
+  padding: 8px 10px;
+  font-weight: bold;
+  margin-top: 10px;
+  color: white;
+}
+
+.bttnDiv {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.answerDiv {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
+.answerDiv select {
+  border-radius: 40px;
+  padding: 5px;
+}
+
 h2 {
   text-align: center;
+}
+
+input[type=text] {
+  border-radius: 40px;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+input[type=password] {
+  border-radius: 40px;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+textarea {
+  padding: 5px;
+  margin: 5px;
+}
+
+textarea:focus-visible {
+  outline: none;
+  outline-offset: 1px;
+}
+
+input[type=text]:focus-visible {
+  outline: none;
+  outline-offset: 1px;
+}
+
+input[type=password]:focus-visible {
+  outline: none;
+  outline-offset: 1px;
 }
